fixed responsivity on small devices

--- a/style/Styles.css
+++ b/style/Styles.css
@@ -2270,6 +2270,6 @@ footer{
         left: calc(100% - 86dvw);
     }
     .center__content{
-        margin-right: calc(100dvw - 2%);
+        margin-right: calc(100dvw - 10%);
     }
 }
